fix: bg on mobile

--- a/app/src/App.scss
+++ b/app/src/App.scss
@@ -157,9 +157,6 @@ html,
   .toggle__drawer__button {
     display: flex;
   }
-  [data-theme="dark"] {
-    --background1: #212b36;
-  }
   html,
   .App {
     height: -webkit-fill-available;
